[package]
name = "actson"
version = "0.5.0"
authors = ["Michel Kraemer <michel@undercouch.de>"]
description = "A reactive (or non-blocking, or asynchronous) JSON parser"
edition = "2021"
license = "MIT"
repository = "https://github.com/michel-kraemer/actson-rs"
keywords = ["json", "parser", "parsing", "deserialization"]
categories = ["encoding", "parser-implementations"]
exclude = ["tests/json_test_suite", "!tests/json_test_suite/test_parsing"]

[features]
default = []
tokio = ["dep:tokio"]
serde_json = ["dep:serde_json"]

[dependencies]
btoi = "0.4.3"
num-traits = "0.2.18"
serde_json = { version = "1.0.114", features = ["float_roundtrip"], optional = true }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["io-util", "rt-multi-thread"], optional = true }

[dev-dependencies]
criterion = "0.5.1"
dtoa = "1.0.9"
serde_json = { version = "1.0.114", features = ["float_roundtrip"] }
tokio = { version = "1.36.0", features = ["fs", "macros", "rt-multi-thread"]}

[[bench]]
name = "bench"
harness = false
