[workspace]
members = ["geojson_benchmarks"]

[package]
name = "actson"
version = "2.1.0"
authors = ["Michel Kraemer <michel@undercouch.de>"]
description = "A reactive (or non-blocking, or asynchronous) JSON parser"
edition = "2021"
license = "MIT"
repository = "https://github.com/michel-kraemer/actson-rs"
keywords = ["json", "parser", "parsing", "deserialization"]
categories = ["encoding", "parser-implementations"]
exclude = ["tests/json_test_suite", "!tests/json_test_suite/test_parsing"]

[features]
default = []
tokio = ["dep:tokio"]
serde_json = ["dep:serde_json"]

[dependencies]
btoi = "0.5.0"
num-traits = "0.2.19"
serde_json = { version = "1.0.141", features = ["float_roundtrip"], optional = true }
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["io-util", "rt-multi-thread"], optional = true }

[dev-dependencies]
criterion = "0.7.0"
dtoa = "1.0.10"
serde_json = { version = "1.0.141", features = ["float_roundtrip"] }
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"]}

[[bench]]
name = "bench"
harness = false
