[package]
name = "geojson_benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.114"
actson = { path = "..", features = ["tokio"] }
tokio = { version = "1.36.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
anyhow = "1.0.80"
serde = { version = "1.0.215", features = ["derive"] }
clap = { version = "4.5.2", features = ["derive", "wrap_help"] }
