[package]
name = "geojson_benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.140"
actson = { path = "..", features = ["tokio"] }
tokio = { version = "1.47.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.44", features = ["derive", "wrap_help"] }
